--- a/assignment_numpy.ipynb
+++ b/assignment_numpy.ipynb
@@ -10,12 +10,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "76b9c43b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef2fa9ba",
+   "metadata": {},
+   "source": [
+    "Создание случайного массива для заданий 1-2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "7678b657",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Random array: [ 3  2 -6  0  9 -2  3  7  8  9 -7  5  4 -5 -4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "random_number_generator = np.random.default_rng()\n",
+    "random_array = random_number_generator.integers(low=-10, high=10, size=15)\n",
+    "\n",
+    "print(f'Random array: {random_array}')"
    ]
   },
   {
@@ -28,12 +57,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 15,
    "id": "b89a7523",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copied array: [ 3  2 -6  0  9 -2  3  7  8  9 -7  5  4 -5 -4]\n",
+      "Result: [-3  2 -6  0  9 -2 -3 -7 -8  9 -7 -5 -4 -5 -4]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "def opposite_sign(array):\n",
+    "  random_array_copy_1 = np.copy(array)\n",
+    "  print(f'Copied array: {random_array_copy_1}')\n",
+    "  for index, element in enumerate(random_array_copy_1):\n",
+    "    if element >= 3 and element <=8:\n",
+    "      opposite_element = element * (-1)\n",
+    "      random_array_copy_1[index] = opposite_element\n",
+    "  print(f'Result: {random_array_copy_1}')\n",
+    "\n",
+    "opposite_sign(random_array)"
    ]
   },
   {
@@ -46,30 +93,348 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 16,
    "id": "f2788a6e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Copied array: [ 3  2 -6  0  9 -2  3  7  8  9 -7  5  4 -5 -4]\n",
+      "Max element: 9\n",
+      "Result: [ 3  2 -6  0  0 -2  3  7  8  0 -7  5  4 -5 -4]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "def replace_max_elem(array):\n",
+    "  random_array_copy_2 = np.copy(array)\n",
+    "  print(f'Copied array: {random_array_copy_2}')\n",
+    "  max_elem = random_array_copy_2.max()\n",
+    "  print(f'Max element: {max_elem}')\n",
+    "  for index, element in enumerate(random_array_copy_2):\n",
+    "    if element == max_elem:\n",
+    "      random_array_copy_2[index] = 0\n",
+    "  print(f'Result: {random_array_copy_2}')\n",
+    "\n",
+    "replace_max_elem(random_array)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3cac656b",
+   "id": "96e136a2",
+   "metadata": {},
+   "source": [
+    "Создание двумерного массива для задания 3 и 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "7fac0a3d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First 2d array:  [ 2 -2 -1 -2] [-4 -2  5  6] [ 8 -2  3  8]\n",
+      "Second 2d array:  [-3  9  2  7] [0 6 1 2] [ 0 -2  0  6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "random_2d_array_1 = random_number_generator.integers(low=-5, high=10, size=(3,4))\n",
+    "print('First 2d array: ', *random_2d_array_1)\n",
+    "random_2d_array_2 = random_number_generator.integers(low=-5, high=10, size=(3,4))\n",
+    "print('Second 2d array: ', *random_2d_array_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5829576",
    "metadata": {},
    "source": [
     "**3.** Построить прямое произведение массивов (все комбинации с каждым элементом). На вход подается двумерный массив"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "61b67b52",
+   "metadata": {},
+   "source": [
+    "Со сплющиванием массивов"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 18,
    "id": "3396b764",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of cartesian product: [[ 2 -3]\n",
+      " [ 2  9]\n",
+      " [ 2  2]\n",
+      " [ 2  7]\n",
+      " [ 2  0]\n",
+      " [ 2  6]\n",
+      " [ 2  1]\n",
+      " [ 2  2]\n",
+      " [ 2  0]\n",
+      " [ 2 -2]\n",
+      " [ 2  0]\n",
+      " [ 2  6]\n",
+      " [-2 -3]\n",
+      " [-2  9]\n",
+      " [-2  2]\n",
+      " [-2  7]\n",
+      " [-2  0]\n",
+      " [-2  6]\n",
+      " [-2  1]\n",
+      " [-2  2]\n",
+      " [-2  0]\n",
+      " [-2 -2]\n",
+      " [-2  0]\n",
+      " [-2  6]\n",
+      " [-1 -3]\n",
+      " [-1  9]\n",
+      " [-1  2]\n",
+      " [-1  7]\n",
+      " [-1  0]\n",
+      " [-1  6]\n",
+      " [-1  1]\n",
+      " [-1  2]\n",
+      " [-1  0]\n",
+      " [-1 -2]\n",
+      " [-1  0]\n",
+      " [-1  6]\n",
+      " [-2 -3]\n",
+      " [-2  9]\n",
+      " [-2  2]\n",
+      " [-2  7]\n",
+      " [-2  0]\n",
+      " [-2  6]\n",
+      " [-2  1]\n",
+      " [-2  2]\n",
+      " [-2  0]\n",
+      " [-2 -2]\n",
+      " [-2  0]\n",
+      " [-2  6]\n",
+      " [-4 -3]\n",
+      " [-4  9]\n",
+      " [-4  2]\n",
+      " [-4  7]\n",
+      " [-4  0]\n",
+      " [-4  6]\n",
+      " [-4  1]\n",
+      " [-4  2]\n",
+      " [-4  0]\n",
+      " [-4 -2]\n",
+      " [-4  0]\n",
+      " [-4  6]\n",
+      " [-2 -3]\n",
+      " [-2  9]\n",
+      " [-2  2]\n",
+      " [-2  7]\n",
+      " [-2  0]\n",
+      " [-2  6]\n",
+      " [-2  1]\n",
+      " [-2  2]\n",
+      " [-2  0]\n",
+      " [-2 -2]\n",
+      " [-2  0]\n",
+      " [-2  6]\n",
+      " [ 5 -3]\n",
+      " [ 5  9]\n",
+      " [ 5  2]\n",
+      " [ 5  7]\n",
+      " [ 5  0]\n",
+      " [ 5  6]\n",
+      " [ 5  1]\n",
+      " [ 5  2]\n",
+      " [ 5  0]\n",
+      " [ 5 -2]\n",
+      " [ 5  0]\n",
+      " [ 5  6]\n",
+      " [ 6 -3]\n",
+      " [ 6  9]\n",
+      " [ 6  2]\n",
+      " [ 6  7]\n",
+      " [ 6  0]\n",
+      " [ 6  6]\n",
+      " [ 6  1]\n",
+      " [ 6  2]\n",
+      " [ 6  0]\n",
+      " [ 6 -2]\n",
+      " [ 6  0]\n",
+      " [ 6  6]\n",
+      " [ 8 -3]\n",
+      " [ 8  9]\n",
+      " [ 8  2]\n",
+      " [ 8  7]\n",
+      " [ 8  0]\n",
+      " [ 8  6]\n",
+      " [ 8  1]\n",
+      " [ 8  2]\n",
+      " [ 8  0]\n",
+      " [ 8 -2]\n",
+      " [ 8  0]\n",
+      " [ 8  6]\n",
+      " [-2 -3]\n",
+      " [-2  9]\n",
+      " [-2  2]\n",
+      " [-2  7]\n",
+      " [-2  0]\n",
+      " [-2  6]\n",
+      " [-2  1]\n",
+      " [-2  2]\n",
+      " [-2  0]\n",
+      " [-2 -2]\n",
+      " [-2  0]\n",
+      " [-2  6]\n",
+      " [ 3 -3]\n",
+      " [ 3  9]\n",
+      " [ 3  2]\n",
+      " [ 3  7]\n",
+      " [ 3  0]\n",
+      " [ 3  6]\n",
+      " [ 3  1]\n",
+      " [ 3  2]\n",
+      " [ 3  0]\n",
+      " [ 3 -2]\n",
+      " [ 3  0]\n",
+      " [ 3  6]\n",
+      " [ 8 -3]\n",
+      " [ 8  9]\n",
+      " [ 8  2]\n",
+      " [ 8  7]\n",
+      " [ 8  0]\n",
+      " [ 8  6]\n",
+      " [ 8  1]\n",
+      " [ 8  2]\n",
+      " [ 8  0]\n",
+      " [ 8 -2]\n",
+      " [ 8  0]\n",
+      " [ 8  6]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "from itertools import product\n",
+    "\n",
+    "def cartezian_product(array_2d_1, array_2d_2):\n",
+    "  flatted_array_1 = np.ravel(array_2d_1)\n",
+    "  flatted_array_2 = np.ravel(array_2d_2)\n",
+    "  pares_iterator = product(flatted_array_1, flatted_array_2)\n",
+    "  result = np.array(list(pares_iterator))\n",
+    "  print(f'Result of cartesian product: {result}')\n",
+    "\n",
+    "cartezian_product(random_2d_array_1, random_2d_array_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78453914",
+   "metadata": {},
+   "source": [
+    "Без сплющивания массивов"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "5e51cf97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result of cartesian product: [[[ 2 -2 -1 -2]\n",
+      "  [-3  9  2  7]]\n",
+      "\n",
+      " [[ 2 -2 -1 -2]\n",
+      "  [ 0  6  1  2]]\n",
+      "\n",
+      " [[ 2 -2 -1 -2]\n",
+      "  [ 0 -2  0  6]]\n",
+      "\n",
+      " [[-4 -2  5  6]\n",
+      "  [-3  9  2  7]]\n",
+      "\n",
+      " [[-4 -2  5  6]\n",
+      "  [ 0  6  1  2]]\n",
+      "\n",
+      " [[-4 -2  5  6]\n",
+      "  [ 0 -2  0  6]]\n",
+      "\n",
+      " [[ 8 -2  3  8]\n",
+      "  [-3  9  2  7]]\n",
+      "\n",
+      " [[ 8 -2  3  8]\n",
+      "  [ 0  6  1  2]]\n",
+      "\n",
+      " [[ 8 -2  3  8]\n",
+      "  [ 0 -2  0  6]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cartezian_product_2(array_2d_1, array_2d_2):\n",
+    "  pares_iterator = product(array_2d_1, array_2d_2)\n",
+    "  result = np.array(list(pares_iterator))\n",
+    "  print(f'Result of cartesian product: {result}')\n",
+    "\n",
+    "cartezian_product_2(random_2d_array_1, random_2d_array_2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a4c0490",
+   "metadata": {},
+   "source": [
+    "Создание массивов для задания 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "66001e43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array A:  [9 1 5] [1 5 2] [5 9 3] [5 8 4] [0 6 7] [9 9 9] [2 4 6] [3 7 8]\n",
+      "Array B:  [1 5] [9 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "B = np.array([\n",
+    "    [1, 5],\n",
+    "    [9, 5]\n",
+    "])\n",
+    "\n",
+    "A = np.array([\n",
+    "    [9, 1, 5],\n",
+    "    [1, 5, 2],\n",
+    "    [5, 9, 3],\n",
+    "    [5, 8, 4],\n",
+    "    [0, 6, 7],\n",
+    "    [9, 9, 9],\n",
+    "    [2, 4, 6],\n",
+    "    [3, 7, 8]\n",
+    "])\n",
+    "\n",
+    "print('Array A: ', *A)\n",
+    "print('Array B: ', *B)"
    ]
   },
   {
@@ -82,12 +447,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 21,
    "id": "cb664782",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Line: [9 1 5]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "def find_lines(array_a, array_b):\n",
+    "  for element in array_a:\n",
+    "    contain_all_rows = True\n",
+    "    for elem in array_b:\n",
+    "      elements_in_line = np.isin(elem, element)\n",
+    "      all_elements = np.all(elements_in_line)\n",
+    "      if not all_elements:\n",
+    "        contain_all_rows = False\n",
+    "        break\n",
+    "    if contain_all_rows:\n",
+    "      print(f'Line: {element}')\n",
+    "\n",
+    "find_lines(A, B)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f70befc7",
+   "metadata": {},
+   "source": [
+    "Создание матрицы для задания 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "5e1ab09c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2D array with duplicates:  [1 2 3] [4 4 4] [10 11 12] [11 11 21] [-2 -2 -2] [1 2 3] [11 11 11] [7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array_with_same_values_in_rows = np.array([\n",
+    "  [1, 2, 3], \n",
+    "  [4, 4, 4],\n",
+    "  [10, 11, 12],\n",
+    "  [11, 11, 21],\n",
+    "  [-2, -2, -2], \n",
+    "  [1, 2, 3], \n",
+    "  [11, 11, 11], \n",
+    "  [7, 8, 9]\n",
+    "])\n",
+    "\n",
+    "print('2D array with duplicates: ', *array_with_same_values_in_rows)"
    ]
   },
   {
@@ -100,12 +522,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 29,
    "id": "fa545b23",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mask:  [ True False  True False False  True False  True]\n",
+      "Result:  [[ 1  2  3]\n",
+      " [10 11 12]\n",
+      " [ 1  2  3]\n",
+      " [ 7  8  9]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "\n",
+    "def is_unique(row):\n",
+    "  return len(row) == len(np.unique(row))\n",
+    "\n",
+    "def delite_rows_with_same_values(array_2d):\n",
+    "  filtered_mask = np.apply_along_axis(is_unique, axis=1, arr=array_2d)\n",
+    "  print('Mask: ', filtered_mask)\n",
+    "  result = array_2d[filtered_mask]\n",
+    "  print('Result: ', result)\n",
+    "\n",
+    "delite_rows_with_same_values(array_with_same_values_in_rows)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e9492c4",
+   "metadata": {},
+   "source": [
+    "Создание двумерного массива с дубликатами для задания 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2e8633f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2D array with duplicates:  [1 2 3] [4 5 6] [10 11 12] [11 11 11] [4 5 6] [1 2 3] [11 11 11] [7 8 9]\n"
+     ]
+    }
+   ],
+   "source": [
+    "array_with_duplicates = np.array([\n",
+    "  [1, 2, 3], \n",
+    "  [4, 5, 6],\n",
+    "  [10, 11, 12],\n",
+    "  [11, 11, 21],\n",
+    "  [4, 5, 6], \n",
+    "  [1, 2, 3], \n",
+    "  [11, 11, 21], \n",
+    "  [7, 8, 9]\n",
+    "])\n",
+    "\n",
+    "print('2D array with duplicates: ', *array_with_duplicates)"
    ]
   },
   {
@@ -118,12 +599,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 24,
    "id": "83d2c0b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array without duplicates:  [1 2 3] [4 5 6] [7 8 9] [10 11 12] [11 11 11]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "def delite_duplicate_lines(array_2d):\n",
+    "  array_without_duplicates = np.unique(array_2d, axis=0)\n",
+    "  print('Array without duplicates: ', *array_without_duplicates)\n",
+    "\n",
+    "delite_duplicate_lines(array_with_duplicates)"
    ]
   },
   {
@@ -167,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 47,
    "id": "065862fc",
    "metadata": {},
    "outputs": [],
@@ -186,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 48,
    "id": "a809e02f",
    "metadata": {},
    "outputs": [],
@@ -205,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 49,
    "id": "b57df008",
    "metadata": {},
    "outputs": [],
@@ -224,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 50,
    "id": "3c592124",
    "metadata": {},
    "outputs": [],
@@ -242,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 51,
    "id": "1e807797",
    "metadata": {},
    "outputs": [],
@@ -275,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 52,
    "id": "10a77f8d",
    "metadata": {},
    "outputs": [],
@@ -293,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 53,
    "id": "9681ebf2",
    "metadata": {},
    "outputs": [
@@ -309,7 +802,7 @@
        "       110., 110.,  90., 110., 140., 100., 110., 110., 100., 100., 110.])"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 54,
    "id": "7036d240",
    "metadata": {},
    "outputs": [],
@@ -351,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 55,
    "id": "46eeb4ed",
    "metadata": {},
    "outputs": [],
@@ -371,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 56,
    "id": "b56627c3",
    "metadata": {},
    "outputs": [],
@@ -391,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 57,
    "id": "fe80ce03",
    "metadata": {},
    "outputs": [],
@@ -411,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 58,
    "id": "ade0f6ea",
    "metadata": {},
    "outputs": [],
@@ -431,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 59,
    "id": "85c8df1f",
    "metadata": {},
    "outputs": [],
@@ -449,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 60,
    "id": "c260fee9",
    "metadata": {},
    "outputs": [],
@@ -460,7 +953,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -474,7 +967,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
