Added solutions for the remaining tasks

--- a/assignment_numpy.ipynb
+++ b/assignment_numpy.ipynb
@@ -1146,16 +1146,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 52,
-   "id": "10a77f8d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "ab87cb03",
    "metadata": {},
@@ -1165,30 +1155,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "id": "9681ebf2",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([ 70., 120.,  70.,  50., 110., 110., 110., 130.,  90.,  90., 120.,\n",
-       "       110., 120., 110., 110., 110., 100., 110., 110., 110., 100., 110.,\n",
-       "       100., 100., 110., 110., 100., 120., 120., 110., 100., 110., 100.,\n",
-       "       110., 120., 120., 110., 110., 110., 140., 110., 100., 110., 100.,\n",
-       "       150., 150., 160., 100., 120., 140.,  90., 130., 120., 100.,  50.,\n",
-       "        50., 100., 100., 120., 100.,  90., 110., 110.,  80.,  90.,  90.,\n",
-       "       110., 110.,  90., 110., 140., 100., 110., 110., 100., 100., 110.])"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calorie statisticsin competing companies:  [ 70. 120.  70.  50. 110. 110. 110. 130.  90.  90. 120. 110. 120. 110.\n",
+      " 110. 110. 100. 110. 110. 110. 100. 110. 100. 100. 110. 110. 100. 120.\n",
+      " 120. 110. 100. 110. 100. 110. 120. 120. 110. 110. 110. 140. 110. 100.\n",
+      " 110. 100. 150. 150. 160. 100. 120. 140.  90. 130. 120. 100.  50.  50.\n",
+      " 100. 100. 120. 100.  90. 110. 110.  80.  90.  90. 110. 110.  90. 110.\n",
+      " 140. 100. 110. 110. 100. 100. 110.]\n"
+     ]
     }
    ],
    "source": [
     "calorie_stats = np.loadtxt(\"./data/cereal.csv\", delimiter=\",\")\n",
-    "calorie_stats"
+    "print('Calorie statisticsin competing companies: ', calorie_stats)"
    ]
   },
   {
@@ -1203,12 +1189,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "id": "7036d240",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average number of calories of competitors:  106.88\n",
+      "That is  46.88  more than Crunchie Munchies has\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "crunchieMunchies_calories = 60\n",
+    "average_calories = np.average(calorie_stats)\n",
+    "print('Average number of calories of competitors: ', round(average_calories, 2))\n",
+    "calories_difference = round(abs(average_calories - crunchieMunchies_calories), 2)\n",
+    "print('That is ', calories_difference, ' more than Crunchie Munchies has')"
    ]
   },
   {
@@ -1222,13 +1221,38 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9fad701b",
+   "metadata": {},
+   "source": [
+    "Для того, чтобы определить корректно ли среднее количество каллорий отражает распределение набора данных необходимо рассчитать медиану(пункт 4), моду и стандартное отклонение(пункт 7). затем сравнить эти значения с рассчитаным средним количеством калорий."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 22,
    "id": "46eeb4ed",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted calories:  [ 50.  50.  50.  70.  70.  80.  90.  90.  90.  90.  90.  90.  90. 100.\n",
+      " 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100.\n",
+      " 100. 100. 110. 110. 110. 110. 110. 110. 110. 110. 110. 110. 110. 110.\n",
+      " 110. 110. 110. 110. 110. 110. 110. 110. 110. 110. 110. 110. 110. 110.\n",
+      " 110. 110. 110. 120. 120. 120. 120. 120. 120. 120. 120. 120. 120. 130.\n",
+      " 130. 140. 140. 140. 150. 150. 160.]\n",
+      "Mean calorie value:  106.88\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "calorie_stats_sorted = np.sort(calorie_stats)\n",
+    "print('Sorted calories: ', calorie_stats_sorted)\n",
+    "mean_value = np.mean(calorie_stats_sorted)\n",
+    "print('Mean calorie value: ', round(mean_value, 2))"
    ]
   },
   {
@@ -1243,12 +1267,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "id": "b56627c3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Median calorie value:  110.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "median_calories = np.median(calorie_stats_sorted)\n",
+    "print('Median calorie value: ', round(median_calories, 2))"
    ]
   },
   {
@@ -1263,12 +1296,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "id": "fe80ce03",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The lowest procentile:  4\n",
+      "The value of the lowest procentile:  70.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "conditional_mask = calorie_stats_sorted > 60\n",
+    "value_index = np.where(conditional_mask)[0][0]\n",
+    "procentile = value_index / calorie_stats_sorted.size * 100\n",
+    "nth_percentile = calorie_stats_sorted[value_index]\n",
+    "\n",
+    "print('The lowest procentile: ', round(procentile))\n",
+    "print('The value of the lowest procentile: ', nth_percentile)"
    ]
   },
   {
@@ -1283,12 +1331,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 27,
    "id": "ade0f6ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The percentage of grains that contain more than 60 calories per portion:  96.1\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "number_of_values_greater_than_60 = np.sum(conditional_mask)\n",
+    "more_calories = number_of_values_greater_than_60 / calorie_stats_sorted.size * 100\n",
+    "print('The percentage of grains that contain more than 60 calories per portion: ', round(more_calories, 2))"
    ]
   },
   {
@@ -1303,12 +1361,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 28,
    "id": "85c8df1f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Standard deviation:  19.36\n",
+      "Variation coefficient:  18.11\n",
+      "The range of the first standard deviation: [88, 126]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "standard_deviation = np.std(calorie_stats_sorted)\n",
+    "variation_coefficient = standard_deviation / average_calories * 100\n",
+    "print('Standard deviation: ', round(standard_deviation, 2))\n",
+    "print('Variation coefficient: ', round(variation_coefficient, 2))\n",
+    "lower_bound = average_calories - standard_deviation\n",
+    "upper_bound = average_calories + standard_deviation\n",
+    "print(f'The range of the first standard deviation: [{round(lower_bound)}, {round(upper_bound)}]')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "468db63e",
+   "metadata": {},
+   "source": [
+    "Среднее значение и коэффициент вариации показывают, что разброс умеренный, и данные плотно сгруппированы вокруг 100 калорий. \n",
+    "Стандартиное отклонение можно включить в анализ показав интервал первого стандартного отклонения (±σ)"
    ]
   },
   {
@@ -1320,13 +1403,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 60,
-   "id": "c260fee9",
+   "cell_type": "markdown",
+   "id": "8bb9db7b",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# your code"
+    "Большинсво данных расположено в пределах 1 стандартного отклонения. Разброс данных умеренный. Среднее значение корректно отображает распределение данных. Среднее значение ≈ моде ≈ медиане.\n",
+    "Mycrunch может строить свою маркетинговую компанию на том, что их продукт отличается существенно низкой коллорийность от подавляющего большинства продуктов, представленных на рынке, и подкреплять её статистическими (рассчитаными) данными."
    ]
   }
  ],
