Added solutions for first 6 tasks(pandas)

--- a/assignment_pandas.ipynb
+++ b/assignment_pandas.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -196,13 +196,12 @@
        "4             0             0              40           Cuba  <=50K  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# загружаем датасет\n",
     "data = pd.read_csv(\"./data/adult.data.csv\")\n",
     "data.head()"
    ]
@@ -216,11 +215,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of men and women:\n",
+      " sex\n",
+      "Male      21790\n",
+      "Female    10771\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "number_of_men_and_women = data['sex'].value_counts()\n",
+    "print('Number of men and women: \\n', number_of_men_and_women)"
    ]
   },
   {
@@ -232,11 +244,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean male age:  39\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "male_mask = data['sex'].str.lower() == 'male'\n",
+    "male_ages = data.loc[male_mask, 'age']\n",
+    "mean_male_age = male_ages.mean()\n",
+    "print('Mean male age: ', round(mean_male_age))"
    ]
   },
   {
@@ -248,11 +271,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proportion of usa citizens:  90\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "usa_nation_mask = data['native-country'].str.lower() == 'united-states'\n",
+    "people_from_usa = data.loc[usa_nation_mask, 'native-country'].size\n",
+    "number_of_persons = data['native-country'].size\n",
+    "proportion_of_usa_citizens = people_from_usa / number_of_persons * 100\n",
+    "print('Proportion of usa citizens: ', round(proportion_of_usa_citizens))"
    ]
   },
   {
@@ -264,11 +299,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean salary age of those who receives less than 50k per year:  37\n",
+      "Mean salary age of those who receives more than 50k per year:  44\n",
+      "Std of age of those who receives less than 50k per year:  14.02\n",
+      "Std of age of those who receives more than 50k per year:  10.52\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "low_salary_mask = data['salary'].str.lower() == '<=50k'\n",
+    "high_salary_mask = data['salary'].str.lower() == '>50k'\n",
+    "\n",
+    "low_salary_ages = data.loc[low_salary_mask, 'age']\n",
+    "high_salary_ages = data.loc[high_salary_mask, 'age']\n",
+    "\n",
+    "mean_low_salary_age = low_salary_ages.mean()\n",
+    "mean_high_salary_age = high_salary_ages.mean()\n",
+    "print('Mean salary age of those who receives less than 50k per year: ', round(mean_low_salary_age))\n",
+    "print('Mean salary age of those who receives more than 50k per year: ', round(mean_high_salary_age))\n",
+    "\n",
+    "std_low_salary_age = low_salary_ages.std()\n",
+    "std_high_salary_age = high_salary_ages.std()\n",
+    "print('Std of age of those who receives less than 50k per year: ', round(std_low_salary_age, 2))\n",
+    "print('Std of age of those who receives more than 50k per year: ', round(std_high_salary_age, 2))\n"
    ]
   },
   {
@@ -280,11 +340,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Education tipes:  ['Bachelors' 'HS-grad' '11th' 'Masters' '9th' 'Some-college' 'Assoc-acdm'\n",
+      " 'Assoc-voc' '7th-8th' 'Doctorate' 'Prof-school' '5th-6th' '10th'\n",
+      " '1st-4th' 'Preschool' '12th']\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "unique_values_education = data['education'].unique()\n",
+    "print('Education tipes: ', unique_values_education)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No, this is false, because in the dataset among those who receive more than 50k per year there are 3306 of those who has lower education\n"
+     ]
+    }
+   ],
+   "source": [
+    "low_education = ['HS-grad', '11th', '9th', 'Some-college', '7th-8th', '5th-6th', '10th', '1st-4th', 'Preschool', '12th']\n",
+    "high_salary_mask = data['salary'].str.lower() == '>50k'\n",
+    "low_education_mask = data['education'].isin(low_education)\n",
+    "counter_examples = data[high_salary_mask & low_education_mask]\n",
+    "if counter_examples.shape[0] == 0:\n",
+    "  print('Yes, that is true')\n",
+    "else:\n",
+    "  print(f'No, this is false, because in the dataset among those who receive more than 50k per year there are {counter_examples.shape[0]} of those who has lower education')"
    ]
   },
   {
@@ -414,7 +509,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -428,7 +523,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
