Added solutions to the whole task

--- a/assignment_pandas.ipynb
+++ b/assignment_pandas.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
        "4             0             0              40           Cuba  <=50K  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,6 +204,23 @@
    "source": [
     "data = pd.read_csv(\"./data/adult.data.csv\")\n",
     "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(32561, 15)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.shape)"
    ]
   },
   {
@@ -391,13 +408,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max male age for Asian-Pac-Islander race:  90.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "age_for_race_and_sex = data.groupby(['race', 'sex'])['age'].describe()\n",
+    "max_male_age = age_for_race_and_sex.loc[('Asian-Pac-Islander', 'Male'), 'max']\n",
+    "\n",
+    "print('Max male age for Asian-Pac-Islander race: ', max_male_age)"
    ]
   },
   {
@@ -409,11 +437,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average age of married man:  44\n",
+      "Proportion of married men with high salary:  44.05\n",
+      "Average age of single man:  32\n",
+      "Proportion of single men with high salary:  8.45\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\37529\\AppData\\Local\\Temp\\ipykernel_17992\\4070433476.py:7: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  num_high_salary_married = (married_men[high_salary_mask]).shape[0]\n",
+      "C:\\Users\\37529\\AppData\\Local\\Temp\\ipykernel_17992\\4070433476.py:18: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "  num_high_salary_single = (single_men[high_salary_mask]).shape[0]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "married_mask = data['marital-status'].str.contains('^Married', na=False)\n",
+    "male_mask = data['sex'].str.lower() == 'male'\n",
+    "\n",
+    "married_men = data[male_mask & married_mask]\n",
+    "mean_married_man_age = married_men['age'].mean()\n",
+    "print('Average age of married man: ', round(mean_married_man_age))\n",
+    "num_high_salary_married = (married_men[high_salary_mask]).shape[0]\n",
+    "total_married = married_men.shape[0]\n",
+    "if total_married > 0:\n",
+    "    proportion_of_high_salary_married = (num_high_salary_married / total_married) * 100\n",
+    "    print('Proportion of married men with high salary: ', round(proportion_of_high_salary_married, 2))\n",
+    "else:\n",
+    "    print('Proportion of married men with high salary: 0.00% (No married men found)')\n",
+    "\n",
+    "single_men = data[male_mask & (~married_mask)]\n",
+    "mean_single_man_age = single_men['age'].mean()\n",
+    "print('Average age of single man: ', round(mean_single_man_age))\n",
+    "num_high_salary_single = (single_men[high_salary_mask]).shape[0]\n",
+    "total_single = single_men.shape[0]\n",
+    "if total_single > 0:\n",
+    "    proportion_of_high_salary_single = (num_high_salary_single / total_single) * 100\n",
+    "    print('Proportion of single men with high salary: ', round(proportion_of_high_salary_single, 2))\n",
+    "else:\n",
+    "    print('Proportion of single men with high salary: 0.00% (No single men found)')"
    ]
   },
   {
@@ -425,11 +497,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max ours per week:  99\n",
+      "Number of persons who work for 99 hours per week: 85\n",
+      "Percentage of persons who recieves high salaries and morks for 99 hours: 29.41\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "max_hours_per_week = data['hours-per-week'].max()\n",
+    "print('Max ours per week: ', max_hours_per_week)\n",
+    "\n",
+    "hours_mask = data['hours-per-week'] == max_hours_per_week\n",
+    "hard_working_persons = data.loc[hours_mask, 'hours-per-week']\n",
+    "print(f'Number of persons who work for {max_hours_per_week} hours per week: {hard_working_persons.shape[0]}')\n",
+    "\n",
+    "hard_working_persons_high_salary = hard_working_persons[high_salary_mask]\n",
+    "percentage_high_salary_max_ours = hard_working_persons_high_salary.shape[0] / hard_working_persons.shape[0] * 100\n",
+    "print(f'Percentage of persons who recieves high salaries and morks for {max_hours_per_week} hours: {round(percentage_high_salary_max_ours, 2)}')"
    ]
   },
   {
@@ -441,13 +532,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean working time per week for each country:  native-country  salary\n",
+      "?               <=50K     40.16\n",
+      "                >50K      45.55\n",
+      "Cambodia        <=50K     41.42\n",
+      "                >50K      40.00\n",
+      "Canada          <=50K     37.91\n",
+      "                          ...  \n",
+      "United-States   >50K      45.51\n",
+      "Vietnam         <=50K     37.19\n",
+      "                >50K      39.20\n",
+      "Yugoslavia      <=50K     41.60\n",
+      "                >50K      49.50\n",
+      "Name: hours-per-week, Length: 82, dtype: float64\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "mean_work_hours_by_country_and_salary = data.groupby(['native-country', 'salary'])['hours-per-week'].mean()\n",
+    "print('Mean working time per week for each country: ', round(mean_work_hours_by_country_and_salary, 2))\n"
    ]
   },
   {
@@ -464,13 +576,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   age         workclass  fnlwgt  education  education-num  \\\n",
+      "0   39         State-gov   77516  Bachelors             13   \n",
+      "1   50  Self-emp-not-inc   83311  Bachelors             13   \n",
+      "2   38           Private  215646    HS-grad              9   \n",
+      "3   53           Private  234721       11th              7   \n",
+      "4   28           Private  338409  Bachelors             13   \n",
+      "\n",
+      "       marital-status         occupation   relationship   race     sex  \\\n",
+      "0       Never-married       Adm-clerical  Not-in-family  White    Male   \n",
+      "1  Married-civ-spouse    Exec-managerial        Husband  White    Male   \n",
+      "2            Divorced  Handlers-cleaners  Not-in-family  White    Male   \n",
+      "3  Married-civ-spouse  Handlers-cleaners        Husband  Black    Male   \n",
+      "4  Married-civ-spouse     Prof-specialty           Wife  Black  Female   \n",
+      "\n",
+      "   capital-gain  capital-loss  hours-per-week native-country salary AgeGroup  \n",
+      "0          2174             0              40  United-States  <=50K    adult  \n",
+      "1             0             0              13  United-States  <=50K    adult  \n",
+      "2             0             0              40  United-States  <=50K    adult  \n",
+      "3             0             0              40  United-States  <=50K    adult  \n",
+      "4             0             0              40           Cuba  <=50K    young  \n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "age_groups = [16, 35, 70, 100]\n",
+    "age_labels = ['young', 'adult', 'retiree']\n",
+    "data['AgeGroup'] = pd.cut(data['age'], bins=age_groups, labels=age_labels, right=False, include_lowest=True)\n",
+    "\n",
+    "print(data.head())\n"
    ]
   },
   {
@@ -482,11 +625,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of persons with high salaries in each group:  AgeGroup\n",
+      "young      1488\n",
+      "adult      6240\n",
+      "retiree     113\n",
+      "Name: IsHighSalary, dtype: int64\n",
+      "Group with biggest percentage: adult, percentage: 35\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\37529\\AppData\\Local\\Temp\\ipykernel_17992\\694982392.py:3: FutureWarning: The default of observed=False is deprecated and will be changed to True in a future version of pandas. Pass observed=False to retain current behavior or observed=True to adopt the future default and silence this warning.\n",
+      "  high_salary_in_each_group = data.groupby('AgeGroup')['IsHighSalary'].sum()\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "data['IsHighSalary'] = high_salary_mask\n",
+    "all_age_groups = data['AgeGroup'].value_counts()\n",
+    "high_salary_in_each_group = data.groupby('AgeGroup')['IsHighSalary'].sum()\n",
+    "proportion_high_salary_in_each_group = high_salary_in_each_group / all_age_groups * 100\n",
+    "print('Number of persons with high salaries in each group: ', high_salary_in_each_group)\n",
+    "group_with_highest_percentage = proportion_high_salary_in_each_group.idxmax()\n",
+    "print(f'Group with biggest percentage: {group_with_highest_percentage}, percentage: {round(proportion_high_salary_in_each_group.max())}')"
    ]
   },
   {
@@ -498,11 +668,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "occupation\n",
+      "Prof-specialty       4140\n",
+      "Craft-repair         4099\n",
+      "Exec-managerial      4066\n",
+      "Adm-clerical         3770\n",
+      "Sales                3650\n",
+      "Other-service        3295\n",
+      "Machine-op-inspct    2002\n",
+      "?                    1843\n",
+      "Transport-moving     1597\n",
+      "Handlers-cleaners    1370\n",
+      "Farming-fishing       994\n",
+      "Tech-support          928\n",
+      "Protective-serv       649\n",
+      "Priv-house-serv       149\n",
+      "Armed-Forces            9\n",
+      "Name: count, dtype: int64\n",
+      "Filtered groups:  ['Armed-Forces']\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code"
+    "occupation_groups = data['occupation'].value_counts()\n",
+    "print(occupation_groups)\n",
+    "\n",
+    "grouped_by_occupation_df = data.groupby('occupation')\n",
+    "\n",
+    "def filter_func(dataset):\n",
+    "  mean_age_mask = dataset['age'].mean() <= 40\n",
+    "  min_hours_mask = dataset['hours-per-week'].min() > 5\n",
+    "  return mean_age_mask and min_hours_mask\n",
+    "\n",
+    "filtered_df = grouped_by_occupation_df.filter(filter_func)\n",
+    "result = filtered_df['occupation'].unique()\n",
+    "print('Filtered groups: ', result)\n"
    ]
   }
  ],
